resources/styles/style.css
body {
    font-family: Helvetica;
}

h1 {
    font-size: 100px;
    font-weight: bold;
    color: khaki;
    background-image: url(../images/pattern.jpeg);
    text-align: center;
}

h2 {
    font-size: 32px;
    font-weight: bold;
    color: white;
    background-color: mediumspringgreen;
}

h3 {
    font-weight: bold;
}

.frame {
    background-color: lightcoral;
}

.paint {
    background-color: skyblue;
}

span {
    color: blue;
    font-weight: bold;
}

